fix z-index

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 .slate-toolbar {
   position: absolute;
-  z-index: 10000;
+  z-index: 100;
   margin-top: -6px;
   color: #fff;
   cursor: auto;
